--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,10 @@ body{
 .menu{
 	height: 100px;
 	margin-bottom: 0px;
-	background: transparent;
+	/* background: transparent; */
+	background-image: url('../fotos/background.jpg');
+	background-repeat: repeat;
+	background-attachment: fixed;
 	border: 0;
 	width: calc(100% - 60px);
 }
@@ -159,24 +162,11 @@ body{
 }
 
 .second{
-	background: #00a550; 
+	background: #00a550;
+	height: 100%; 
 }
 .second h2{
 	color: #fff;
-}
-.third{
-	padding: 60px 0 0 0;
-}
-.third .carousel{
-	width: 100%;
-	max-width: 100%;
-	height: calc(100% - 63px);
-}
-.third .carousel .carousel-inner .item{
-    background-position: center center;
-    background-size: cover;
-    background-repeat: no-repeat;
-	height: 100%;
 }
 .fourth{
 	background: #B2E4CA;
@@ -294,25 +284,11 @@ body{
 .fourth .perfil-integrante .perfil-foto:hover{
 	opacity: 0.2;
 }
-.projetos{
-	background-image: url(../fotos/back-eletronic.jpg) !important;
-    background-repeat: no-repeat !important;
-    background-size: contain !important;
-	padding-top: 0px !important;
-}
-.projetos .content-title{
-	background: rgba(255, 255, 255, 1) !important;
-	padding-top: 70px !important;
-}
-.projetos .tabs-sideways{
-	background: rgba(255, 255, 255, 0.7) !important;
-}
-.projetos .tabs-sideways .tab-content{
-	background: transparent !important;
-}
+
 .fifth{
-	padding: 60px 0px 0px 0px;
+	padding: 60px 0px 60px 0px;
 	background: #fff;
+	height: 100%;
 }
 .fifth h2{
 	color: #00a550;
@@ -330,10 +306,8 @@ body{
 .fifth .tabs-sideways .tab-content{
 	border: 1px solid #ddd;
     background: #fff;
-    height: auto;
-	min-height: 100%;
+    height: 100%;
 	width: 100%;
-	float: left;
 }
 .fifth .tabs-sideways h3{
 	margin-top: 0px;
@@ -358,46 +332,9 @@ body{
 	width: calc(100% - 150px);
 	float: left;
 }
-.tr-odd-even:nth-child(even){
-	background: #99DBB9;
-}
-.tr-odd-even:nth-child(odd){
-	background: #66C996;
-}
-.tr-odd-even:hover{
-	background: #32B772;
-}
-.margin-table{
-	margin: 20px 0;
-}
-.border-table{
-	border: 1px solid black;
-}
-.width-table-td{
-	width: 150px; 
-	text-align: center;
-	padding: 5px 10px;
-}
-.padding-table{
-	padding: 5px 10px;
-}
-.negrito-table{
-	font-weight: bold;
-}
-.cor-table-tr{
-	color: #fff;
-	background: #00a550;
-}
-.cor-table-tr-title{
-	color: #00a550;
-	background: #fff;
-}
-.gerenciador{
-	padding-top: 100px;
-}
 .sixth{
 	background: #fff;
-	padding: 60px 0px 0px 0px;
+	padding: 60px 0px 60px 0px;
 }
 .sixth h2{
 	color: #00a550;
@@ -498,18 +435,17 @@ body{
 .nav-tabs{
 	border: 0;
 }
-.seventh{
-	background: #fff;
-}
+
 .seventh h2{
 	color: #00a550;
 }
 .content-parceiro{
 	min-width: 1200px;
 	width: 1200px;
-	padding: 0px 60px;
+	padding: 0px 40px 0 40px;
 	float: left;
 	height: auto;
+	position: center;
 }
 .content-parceiro .imagem-parceiro{
 	float: left;
@@ -614,28 +550,6 @@ body{
 	background-size: 330px 240px;
 	background-position: center top;
 }
-.ps_gestao {
-	position: fixed;
-	width: 230px;
-	height: 140px;
-	left: 0;
-	bottom: 0;
-	background-image: url(../fotos/ps_gestao.png);
-	background-repeat: no-repeat;
-	background-size: 230px 140px;
-	background-position: center top;
-}
-.gestor {
-	position: fixed;
-	width: 32px;
-	height: 32px;
-	right: 0;
-	bottom: 0;
-	background-image: url(../fotos/gerenciador.png);
-	background-repeat: no-repeat;
-	background-size: 30px 30px;
-	background-position: center top;
-}
 .ps-form .form-horizontal{
 	background: rgba(255, 255, 255, 0.4);
     padding: 20px;
@@ -683,12 +597,7 @@ body{
 	font-size: 12px;
 	text-align: left;
 }
-.ps-form .pdf-edital, .ps-form .pdf-edital p{
-	text-align: center;
-}
-.ps-form .pdf-edital a:link, .ps-form .pdf-edital a:visited, .ps-form .pdf-edital a:hover, .ps-form .pdf-edital a:active{
-	color: #fff;
-}
+
 .facebook, .instagram, .snapchat, .youtube {
 	width: 60px;
 	height: 60px;
@@ -793,7 +702,7 @@ body{
 	height: auto;
 }
 .footer2 .content2{
-	height: auto;
+	height: 100%;
 	padding: 10px 0;
 	width: 90%;
 	margin: 0 5%;
